Update Commit - Medications services completed

--- a/src/main/resources/templates/drone-edit.html
+++ b/src/main/resources/templates/drone-edit.html
@@ -40,7 +40,7 @@
         <tr>
             <td>Weight Limit in grams</td>
             <td>:</td>
-            <td><input class="form-control" type="number" th:field="*{weightLimit}" /></td>
+            <td><input class="form-control" type="number" th:field="*{weightLimit}" min="0"/></td>
         </tr>
         <tr>
             <td>Battery Capacity</td>
